<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>unitree_gazebo</name>
  <version>0.0.0</version>
  <description>The unitree_gazebo package</description>
  <maintainer email="katayama.25w@st.kyoto-u.ac.jp">sotaro</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_python</depend>
  <depend>gazebo</depend>
  <depend>gazebo_ros_pkgs</depend>

  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>xacro</depend>
  <depend>urdf</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>gazebo_ros2_control</depend>

  <exec_depend>unitree_mpc</exec_depend>
  <exec_depend>unitree_description</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
