<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>unitree_gazebo</name>
  <version>0.0.0</version>
  <description>The unitree_gazebo package</description>
  <maintainer email="katayama.25w@st.kyoto-u.ac.jp">sotaro</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>angles</depend>
  <depend>gazebo_dev</depend>
  <depend>hardware_interface</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_ros2_control</depend>

  <build_depend>unitree_hardware</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros2_control plugin="${prefix}/unitree_gazebo_hardware_plugin.xml"/>
  </export>
</package>
